# pest-classification-boilerplate

./: .gitignore  README.md  pyproject.toml
pytorch_boilerplate/: main.py
tests/: test_pytorch_boilerplate.py
