[tool.poetry]
name = "pytorch-boilerplate"
version = "0.1.0"
description = ""
authors = ["Harri Taylor <harritaylor@pm.me>"]

[tool.poetry.dependencies]
python = "^3.10"
ipython = "^8.3.0"
pytorch-lightning = "^1.6.2"
lightning-bolts = "^0.5.0"
pytest = "^7.1.2"
patool = "^1.12"
pandas = "^1.4.2"
torchvision = "^0.12.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
